--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-ease": "^1.0.3",
     "htmr": "0.6.3",
     "jdown": "0.1.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.0.0-beta.21",
@@ -24,8 +25,8 @@
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
-    "serve": "^6.1.0",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "serve": "^6.1.0"
   }
 }
