--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-static": "^5.7.6",
     "recompose": "^0.26.0",
     "sass-resources-loader": "^1.3.3",
-    "svg-sprite-loader": "^3.7.3"
+    "sassline": "^2.1.2",
+    "svg-sprite-loader": "^3.7.3",
+    "vertical-rhythm-reset": "^1.1.0"
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
