--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^4.2.0",
     "react-static": "^5.7.6",
     "recompose": "^0.26.0",
+    "sass-easing": "^1.0.3",
     "sass-resources-loader": "^1.3.3",
     "sassline": "^2.1.2",
     "svg-sprite-loader": "^3.7.3",
