--- a/package.json
+++ b/package.json
@@ -10,31 +10,28 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
-    "chokidar": "2.0.3",
+    "chokidar": "2.0.4",
     "d3-ease": "^1.0.3",
-    "htmr": "0.6.3",
-    "jdown": "0.1.0",
-    "mustard-ui": "^0.0.7",
-    "normalize.css": "^8.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^4.0.0-beta.21",
+    "htmr": "0.7.0",
+    "jdown": "0.6.4",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
     "react-move": "^2.7.0",
-    "react-router": "^4.2.0",
-    "react-static": "^5.7.6",
-    "recompose": "^0.26.0",
+    "react-router": "^4.3.1",
+    "react-static": "^5.9.5",
+    "recompose": "^0.28.1",
     "sass-easing": "^1.0.3",
     "sass-resources-loader": "^1.3.3",
-    "sassline": "^2.1.2",
-    "svg-sprite-loader": "^3.7.3",
-    "vertical-rhythm-reset": "^1.1.0"
+    "svg-sprite-loader": "^3.8.0",
+    "vertical-rhythm-reset": "^1.1.1"
   },
   "devDependencies": {
-    "eslint-config-react-tools": "1.x.x",
+    "eslint-config-react-tools": "1.1.6",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.8.3",
-    "sass-loader": "~7.0.1",
-    "serve": "^6.1.0",
-    "webpack": "^4.6.0"
+    "node-sass": "^4.9.2",
+    "sass-loader": "~7.1.0",
+    "serve": "^9.4.0",
+    "webpack": "^4.16.4"
   }
 }
