--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "d3-ease": "^1.0.3",
     "htmr": "0.7.0",
     "jdown": "0.6.4",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-moment": "^0.7.9",
     "react-move": "^2.7.0",
     "react-router": "^4.3.1",
     "react-static": "^5.9.5",
