--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.1.6",
-    "extract-text-webpack-plugin": "next",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.9.2",
     "sass-loader": "~7.1.0",
     "serve": "^9.4.0",
