--- a/package.json
+++ b/package.json
@@ -10,30 +10,29 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
-    "chokidar": "2.0.4",
+    "axios": "^0.16.2",
+    "chokidar": "^2.0.4",
     "d3-ease": "^1.0.3",
-    "htmr": "0.7.0",
-    "jdown": "0.6.4",
+    "htmr": "^0.7.0",
+    "jdown": "^0.6.4",
     "moment": "^2.22.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "^4.3.4",
     "react-moment": "^0.7.9",
     "react-move": "^2.7.0",
-    "react-router": "^4.3.1",
-    "react-static": "^5.9.5",
-    "recompose": "^0.28.1",
+    "react-router": "^4.2.0",
+    "react-static": "^5.9.7",
+    "recompose": "^0.27.0",
     "sass-easing": "^1.0.3",
-    "sass-resources-loader": "^1.3.3",
     "svg-sprite-loader": "^3.8.0",
     "vertical-rhythm-reset": "^1.1.1"
   },
   "devDependencies": {
-    "eslint-config-react-tools": "1.1.6",
+    "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.9.2",
-    "sass-loader": "~7.1.0",
-    "serve": "^9.4.0",
-    "webpack": "^4.16.4"
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "serve": "^6.1.0"
   }
 }
