--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-move": "^2.7.0",
     "react-router": "^4.2.0",
     "react-static": "^5.9.7",
+    "react-structured-data": "^0.0.9",
     "recompose": "^0.27.0",
     "sass-easing": "^1.0.3",
     "svg-sprite-loader": "^3.8.0",
