:racehorse: Replace moment with dateformat

--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "axios": "^0.16.2",
     "chokidar": "^2.0.4",
     "d3-ease": "^1.0.3",
+    "dateformat": "^3.0.3",
     "htmr": "^0.7.0",
     "jdown": "^0.6.4",
-    "moment": "^2.22.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.3.4",
-    "react-moment": "^0.7.9",
     "react-move": "^2.7.0",
     "react-router": "^4.2.0",
     "react-static": "^5.9.7",
