--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^6.0.6",
     "serve": "^6.1.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
