:zap: Fix react package numbers (is an upstream error somewhere)

--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "dateformat": "^3.0.3",
     "htmr": "^0.7.0",
     "jdown": "^0.6.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^4.3.4",
-    "react-move": "^2.7.0",
-    "react-router": "^4.2.0",
-    "react-static": "^5.9.7",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-hot-loader": "4.3.4",
+    "react-router": "4.2.0",
+    "react-static": "5.9.7",
     "recompose": "^0.27.0",
     "sass-easing": "^1.0.3",
     "svg-sprite-loader": "^3.8.0",
