--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^4.2.0",
     "react-static": "^5.9.7",
     "sass-easing": "^1.0.3",
+    "svg-sprite-loader": "^3.8.0",
     "vertical-rhythm-reset": "^1.1.1"
   },
   "devDependencies": {
